# pyawaitable

./: .clang-format  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  a.py  hatch.toml  hatch_build.py  memray-flamegraph-a.py.94042.html  memray-flamegraph-test.py.13721.html  mkdocs.yml  netlify.toml  pyawaitable.h  pyproject.toml  requirements.txt  setup.py  uncrustify.cfg  valgrind.txt  vendor.py
.github/ISSUE_TEMPLATE/: bug.yml  crash.yml  feature.yml  improvement.yml
.github/ISSUE_TEMPLATES/: feature.yml
.github/workflows/: all_checks_pass.yml  build.yml  changelog.yml  memory_check.yml  memory_leak.yml  memory_leak_noop.yml  test_noop.yml  tests.yml  triage.yml
docs/: adding_awaits.md  adding_awaits.rst  adding_coros.md  awaiting.md  c_async.md  callbacks.md  conf.py  index.md  index.rst  installation.md  installation.rst  overview.md  reference.rst  storage.md  storing_and_fetching.md  utilities.md  value_storage.md  version_rules.md
docs/outputdir/doctrees/: environment.pickle  index.doctree
docs/outputdir/html/: .buildinfo  genindex.html  searchindex.js
docs/usage/: adding_awaits.rst  c_async.rst  value_storage.rst
include/: awaitable.h  defines.h  pyawaitable.h  util.h  vendor.h
include/pyawaitable/: _pyawaitable.h  array.h  awaitableobject.h  backport.h  coro.h  defines.h  dist.h  genwrapper.h  init.h  optimize.h  util.h  values.h  with.h
site/doctrees/: environment.pickle
site/html/: index.html  objects.inv  search.html
src/: awaitable.c  awaitable.h  pyawaitable.pyi
src/_pyawaitable/: array.c  awaitable.c  backport.c  coro.c  genwrapper.c  init.c  mod.c  util.c  values.c  with.c
src/pyawaitable/: __init__.py  __main__.py  abi.py  bindings.py  pyawaitable.h
tests/: conftest.py  main.py  module.c  pyawaitable_test.h  setup.py  test_awaitable.c  test_awaitable.py  test_builds.py  test_callbacks.c  test_callbacks.py  test_main.py  test_util.h  test_values.c  test_values.py  test_with.py  util.c
tests/builds/: ensure_build_worked.py  module.c
tests/builds/meson/: meson.build  module.c  pyproject.toml
tests/builds/scikit-build-core/: CMakeLists.txt  module.c  pyproject.toml
tests/builds/setuptools/: pyproject.toml  setup.py
tests/extension/: a.c  pyproject.toml  setup.py  test.c
tests/legacy/: test_awaitable.py  test_callbacks.py
