[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyawaitable"
authors = [
    { name = "ZeroIntensity", email = "zintensitydev@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
version = "1.0.0-beta1"

[project.urls]
Documentation = "https://awaitable.zintensity.dev"
Issues = "https://github.com/ZeroIntensity/pyawaitable/issues"
Source = "https://github.com/ZeroIntensity/pyawaitable"
