[build-system]
requires = ["hatch~=1.14", "hatchling~=1.27"]
build-backend = "hatchling.build"

[project]
name = "pyawaitable"
description = "Call asynchronous code from an extension module."
authors = [
    { name = "Peter Bierma", email = "zintensitydev@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = ["version"]
requires-python = ">=3.9"

[project.urls]
Documentation = "https://pyawaitable.zintensity.dev"
Issues = "https://github.com/ZeroIntensity/pyawaitable/issues"
Source = "https://github.com/ZeroIntensity/pyawaitable"

[project.scripts]
pyawaitable = "pyawaitable.__main__:main"
